== Change Log

* Fix with_error in render_matcher not causing the spec to fail when no exception raised. [Jason Garber]

=== 0.8.0 RC1

* Catch missing template errors for show routes [Jim Gay]
* Make features task run in instance mode. [Sean Cribbs]
* Remove Admin::AbstractModelController. [Sean Cribbs]
* Cleanup deprecated Gem::manage_gems. [Sean Cribbs]
* Add begin...rescue blocks to rspec.rake [Sean Cribbs]
* Add begin...rescue blocks for requiring cucumber. [Matt Henry]
* Deprecate ResponseCache, add Radiant::Cache based on Rack::Cache.
[Sean Cribbs]
* Use app name for session cookie. [Josh French]
* Upgrade to Rails 2.3.2. [Sean Cribbs, Rick DeNatale, Josh French,
Kunal Shah]
* Populate config.extensions so extensions can be disabled easily.
[Jason Garber]
* Convert integration specs to Cucumber stories and update RSpec. [Sean
Cribbs]
* Use ActionView::PathSet instead of normal arrays for view paths. [Pat
Allan]
* Don't raise exception on unauthenticated request to /admin/logout.
[Josh French]
* Reverse view paths order in extension loader. [Sean Cribbs, Brent
Kroeker]
* Remove obviated Ruby 1.8.7 compatibility patch. [Sean Cribbs]
* Adjust StandardTags#relative_url_for for case when relative_url_root
is nil. [Sean Cribbs]
* Correct rendering error in extensions controller. [Sean Cribbs]
* Correct typo in config/boot.rb. [Sean Cribbs]
* Major refactoring and simplification of LoginSystem. [Sean Cribbs]
* Update Haml to 2.0.7. [Sean Cribbs]
* Upgrade to Rails 2.2.2. [Sean Cribbs]
* Cleanup the config class a little, add some more documentation. [Sean
Cribbs]
* Avoid bootstrap errors related to Radiant::Config by checking for
table existence. [Sean Cribbs]
* Correct status code typo in Admin::ResourceController. [Sean Cribbs]

=== 0.7.1 Engraving

* Properly escape page part contents in the UI. [John Muhl, Sean Cribbs]
* Fix tag reference popup and spec out helper better. [Sean Cribbs]

=== 0.7.0 Intaglio
* Add Roasters template. [Paul du Coudray]