@@ -1,10 +1,14 @@
 == Change Log
 
+=== Edge
+
+* Catch ActiveRecord::RecordNotFound in Admin::ResourceController
+[Jim Gay]
+* Catch missing template errors for show routes [Jim Gay]
 * Fix with_error in render_matcher not causing the spec to fail when no exception raised. [Jason Garber]
 
 === 0.8.0 RC1
 
-* Catch missing template errors for show routes [Jim Gay]
 * Make features task run in instance mode. [Sean Cribbs]
 * Remove Admin::AbstractModelController. [Sean Cribbs]
 * Cleanup deprecated Gem::manage_gems. [Sean Cribbs]
